Library/AXL(Library)/Dynamic Link/DAXDEV.h

typedef DWORD   PASCAL EXPORT funcAxlGetFirmwareVersion(long lBoardNo, PTCHAR szVersion);
extern funcAxlGetFirmwareVersion                *AxlGetFirmwareVersion;