Library/AXL(Library)/Delphi/AXDev.pas


// Drive API which moves from edge detection of sensor input pin during velocity mode driving as much as specified position, then stop. Applied motion is started upon the start of API, then escapes from the API immediately without waiting until the motion is completed.
function AxmSensorStartMovePos(lAxisNo : LongInt; dPos : Double; dVel : Double; dAccel : Double; dDecel : Double; lMethod : LongInt) : DWord; stdcall;


// Return record of origin search progress step.
// *lpStepCount      : Number of step(Be recorded)
// *upMainStepNumber : Array point of 'MainStepNumber ' information(Be recorded)
// *upStepNumber     : Array point of 'StepNumber ' information(Be recorded)
// *upStepBranch     : Array point of branch information by step(Be recorded)
// ¡Ø Caution : Number of array should be fixed 50.
function AxmHomeGetStepTrace(lAxisNo : LongInt; lpStepCount : PLongInt; dwpMainStepNumber : PDWord; dwpStepNumber : PDWord; dwpStepBranch : PDWord) : DWord; stdcall;


//======= Additive home search (Applicable to PI-N804/404  only) ===============

// Set home setting parameters of axis specified by user. (Use exclusive-use register for QI chip).
// uZphasCount : Z phase count after home completion. (0 - 15)
// lHomeMode   : Home setting mode( 0 - 12)
// lClearSet   : Select use of position clear and remaining pulse clear (0 - 3)
//               0: No use of position clear, no use of remaining pulse clear
//               1: use of position clear, no use of remaining pulse clear
//               2: No use of position clear, use of remaining pulse clear
//               3: use of position clear, use of remaining pulse clear
// dOrgVel : Set Org  Speed related home
// dLastVel: Set Last Speed related home
function AxmHomeSetConfig(lAxisNo : LongInt; dwZphasCount : DWord; lHomeMode : LongInt; lClearSet : LongInt; dOrgVel : Double; dLastVel : Double; dLeavePos : Double) : DWord; stdcall;
// Return home setting parameters of axis specified by user.
function AxmHomeGetConfig(lAxisNo : LongInt; dwpZphasCount : PDword; lpHomeMode : PLongInt; lpClearSet : PLongInt; dpOrgVel : PDouble; dpLastVel : PDouble; dpLeavePos : PDouble) : DWord; stdcall;

// Start home search of axis specified by user
// Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
// If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
// Move direction      : CW when Vel value is positive, CCW when negative.
function AxmHomeSetMoveSearch(lAxisNo : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// Start home return of axis specified by user.
// Set when lHomeMode is used: set 0 - 12
// If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
// Move direction      : CW when Vel value is positive, CCW when negative.
function AxmHomeSetMoveReturn(lAxisNo : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// Home separation of axis specified by user is started.
// Move direction      : CW when Vel value is positive, CCW when negative.
function AxmHomeSetMoveLeave(lAxisNo : LongInt; dVel : Double; dAccel : Double; dDecel : Double) : DWord; stdcall;

// User start home search of multi-axis specified by user.
// Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
// If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
// Move direction      : CW when Vel value is positive, CCW when negative.
function AxmHomeSetMultiMoveSearch(lArraySize : LongInt; lpAxesNo : PLongInt; dpVel : PDouble; dpAccel : PDouble; dpDecel : PDouble) : DWord; stdcall;

//Set move velocity profile mode of specific coordinate system.
// (caution : Available to use only after axis mapping)
//ProfileMode : '0' - symmetry Trapezoid
//              '1' - asymmetric Trapezoid
//              '2' - symmetry Quasi-S Curve
//              '3' - symmetry S Curve
//              '4' - asymmetric S Curve
function AxmContiSetProfileMode(lCoord : LongInt; dwProfileMode : DWord) : DWord; stdcall;
// Return move velocity profile mode of specific coordinate system.
function AxmContiGetProfileMode(lCoord : LongInt; dwpProfileMode : PDWord) : DWord; stdcall;


//========== Reading group for input interrupt occurrence flag =================
// Reading the interrupt occurrence state by bit unit in specified input contact module and Offset position of Interrupt Flag Register
function AxdiInterruptFlagReadBit(lModuleNo : LongInt; lOffset : LongInt; dwpValue : PDWord) : DWord; stdcall;
// Reading the interrupt occurrence state by byte unit in specified input contact module and Offset position of Interrupt Flag Register
function AxdiInterruptFlagReadByte(lModuleNo : LongInt; lOffset : LongInt; dwpValue : PDWord) : DWord; stdcall;
// Reading the interrupt occurrence state by word unit in specified input contact module and Offset position of Interrupt Flag Register
function AxdiInterruptFlagReadWord(lModuleNo : LongInt; lOffset : LongInt; dwpValue : PDWord) : DWord; stdcall;
// Reading the interrupt occurrence state by double word unit in specified input contact module and Offset position of Interrupt Flag Register
function AxdiInterruptFlagReadDword(lModuleNo : LongInt; lOffset : LongInt; dwpValue : PDWord) : DWord; stdcall;
// Reading the interrupt occurrence state by bit unit in entire input contact module and Offset position of Interrupt Flag Register
function AxdiInterruptFlagRead(lOffset : LongInt; dwpValue : PDWord) : DWord; stdcall;

//========= API related log ====================================================
// This API sets or resets in order to monitor the API execution result of set axis in EzSpy.
// uUse : use or not use => DISABLE(0), ENABLE(1)
function AxmLogSetAxis(lAxisNo : LongInt; dwUse : DWord) : DWord; stdcall;

// This API verifies if the API execution result of set axis is monitored in EzSpy.
function AxmLogGetAxis(lAxisNo : LongInt; dwpUse : PDWord) : DWord; stdcall;

//==Log
//Set whether to log output to EzSpy of specified input channel
function AxaiLogSetChannel(lChannelNo : LongInt; dwUse : DWord) : DWord; stdcall;
//Verify whether to log output to EzSpy of specified input channel
function AxaiLogGetChannel(lChannelNo : LongInt; dwpUse : PDWord) : DWord; stdcall;

//Set whether to log output in EzSpy of specified output channel
function AxaoLogSetChannel(lChannelNo : LongInt; dwUse : DWord) : DWord; stdcall;
//Verify whether log output is done in EzSpy of specified output channel.
function AxaoLogGetChannel(lChannelNo : LongInt; dwpUse : PDWord) : DWord; stdcall;

// Set whether execute log output on EzSpy of specified module
function AxdLogSetModule(lModuleNo : LongInt; dwUse : DWord) : DWord; stdcall;
// Verify whether execute log output on EzSpy of specified module
function AxdLogGetModule(lModuleNo : LongInt; dwpUse : PDWord) : DWord; stdcall;




//Verify whether to firmware version designated RTEX board.
function AxlGetFirmwareVersion(lBoardNo : LongInt; szVersion : PChar) : DWord; stdcall;
//Sent to firmware designated board.
function AxlSetFirmwareCopy(lBoardNo : LongInt; wpData : PWord; wpCmdData : PWord) : DWord; stdcall;
//Execute Firmware update to designated board.
function AxlSetFirmwareUpdate(lBoardNo : LongInt) : DWord; stdcall;
//Verify whether currently RTEX status Initialized.
function AxlCheckStatus(lBoardNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;
//Execute universal command designated axis of board.
function AxlRtexUniversalCmd(lBoardNo : LongInt; wCmd : Word; wOffset : Word; wpData : PWord) : DWord; stdcall;
//Execute RTEX communication command designated axis.
function AxmRtexSlaveCmd(lAxisNo : LongInt; dwCmdCode : DWord; dwTypeCode : DWord; dwIndexCode : DWord; dwCmdConfigure : DWord; dwValue : DWord) : DWord; stdcall;
//Verify whether Result of RTEX communication command designated axis.
function AxmRtexGetSlaveCmdResult(lAxisNo : LongInt; dwpIndex : PDWord; dwpValue : PDWord) : DWord; stdcall;
// Check the result of the RTEX communication command executed on the specified axis. PCIE-Rxx04-RTEX only
function AxmRtexGetSlaveCmdResultEx(lAxisNo : LongInt; dwpCommand : PDWord; dwpType : PDWord; dwpIndex : PDWord; dwpValue : PDWord) : DWord; stdcall;
//Verify whether RTEX status information designated axis.
function AxmRtexGetAxisStatus(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;
//Verify whether RTEX communication return information designated axis.(Actual position, Velocity, Torque)
function AxmRtexGetAxisReturnData(lAxisNo : LongInt;  dwpReturn1 : PDWord; dwpReturn2 : PDWord; dwpReturn3 : PDWord) : DWord; stdcall;
//Verify whether currently status information of RTEX slave axis.(mechanical, Inposition and etc)
function AxmRtexGetAxisSlaveStatus(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;


// Enter the universal network command of specified MLII slave axis.
function AxmSetAxisCmd(lAxisNo : LongInt; dwpTagCommand : PDWord) : DWord; stdcall;
// Verifying result of universal network command of specified MLII slave axis.
function AxmGetAxisCmdResult(lAxisNo : LongInt; dwpTagCommand : PDWORD) : DWord; stdcall;


// The specified SID Write the result of the network command to the slave module and return it.
function AxdSetAndGetSlaveCmdResult(lModuleNo : LongInt; dwptagSetCommand : PDWord; dwptagGetCommand : PDWord) : DWord; stdcall;
function AxaSetAndGetSlaveCmdResult(lModuleNo : LongInt; dwptagSetCommand : PDWord; dwptagGetCommand : PDWord) : DWord; stdcall;
function AxcSetAndGetSlaveCmdResult(lModuleNo : LongInt; dwptagSetCommand : PDWord; dwptagGetCommand : PDWord) : DWord; stdcall;

// Verify DPRAM data.
function AxlGetDpRamData(lBoardNo : LongInt; wAddress : Word; dwpRdData : PDWord) : DWord; stdcall;
// Verify DPRAM data in Word unit.
function AxlBoardReadDpramWord(lBoardNo : LongInt; wOffset : Word; dwpRdData : PDWord) : DWord; stdcall;
// Set DPRAM data in Word unit.
function AxlBoardWriteDpramWord(lBoardNo : LongInt; wOffset : Word; dwWrData : DWord) : DWord; stdcall;


// Transmit instructions of each slave of each board.
function AxlSetSendBoardEachCommand(lBoardNo : LongInt; dwCommand : DWord; dwpSendData : PDWord; dwLength : DWord) : DWord; stdcall;
// Transmit instructions to each board.
function AxlSetSendBoardCommand(lBoardNo : LongInt; dwCommand : DWord; dwpSendData : PDWord; dwLength : DWord) : DWord; stdcall;
// Verify the response of each board.
function AxlGetResponseBoardCommand(lBoardNo : LongInt; dwpReadData : PDWord) : DWord; stdcall;

// Reading firmware version function of slaves in network type master board.
// Declare with array of ucaFirmwareVersion unsigned char type(Size : 4 or more)
function AxmInfoGetFirmwareVersion(lAxisNo : LongInt;  dwcaFirmwareVersion : PWord) : DWord; stdcall;
function AxaInfoGetFirmwareVersion(lModuleNo : LongInt; dwcaFirmwareVersion : PWord) : DWord; stdcall;
function AxdInfoGetFirmwareVersion(lModuleN : LongInt; dwcaFirmwareVersion : PWord) : DWord; stdcall;
function AxcInfoGetFirmwareVersion(lModuleN : LongInt; dwcaFirmwareVersion : PWord) : DWord; stdcall;


//======== Only for PCI-R1604-MLII ===========================================================================
// Set the value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
// Default value : Max
// Setting value Range : 0 ~ 4000H
// If it is set to 4000H or higher, the setting is set higher than that, but the operation is applied to the value of 4000H.
function AxmSetTorqFeedForward(lAxisNo : LongInt; dwTorqFeedForward : DWord) : DWord; stdcall;

// It is API that read value of Torq Feed Forward of Option Field of INTERPOLATE and LATCH Command.
// Default value : Max
function AxmGetTorqFeedForward(lAxisNo : LongInt; dwpTorqFeedForward : PDWord) : DWord; stdcall;
